--- a/.github/workflows/py_format_lint.yml
+++ b/.github/workflows/py_format_lint.yml
@@ -22,7 +22,9 @@ jobs:
         pip install pylint-fail-under
     - name: Analysing the code with pylint
       run: |
+        cd ./backend
         pylint app.py --fail-under=7.0
     - name: Analysing the format with flake8
       run: |
+        cd ./backend
         flake8 app.py
